--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,10 @@
     <string name="sign_up">Sign Up?</string>
     <string name="forget_password">Forget Password?</string>
     <string name="log_in">LOGIN</string>
+    <string name="password">Password</string>
+    <string name="login2">Login?</string>
+    <string name="google">Google</string>
+    <string name="facebook">Facebook</string>
+    <string name="twitter">Twitter</string>
 
 </resources>
