--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="tripawy">Tripawy</string>
     <string name="login">LogIn</string>
     <string name="email_address">Email Address</string>
-    <string name="sign_up">Sign Up?</string>
+    <string name="sign_up">Sign Up</string>
     <string name="forget_password">Forget Password?</string>
     <string name="log_in">LOGIN</string>
     <string name="password">Password</string>
