history clickable card

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,6 +76,8 @@
     <string name="txtTripTypeee">trip type</string>
     <string name="Delete">Delete</string>
     <string name="btn"><![CDATA[&#8942;]]></string>
+    <string name="btnShowNotes">SHOW NOTES</string>
+    <string name="deleteTrip">DELETE</string>
 
 
 </resources>
