--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,5 +79,6 @@
     <string name="btnShowNotes">SHOW NOTES</string>
     <string name="deleteTrip">DELETE</string>
 
+    <string name="draw_other_app_permission_denied">Draw over other app permission not available. App won\'t work without permission. Please try again.</string>
 
 </resources>
